--- a/UserInterfaceCSS/website/templates/base.html
+++ b/UserInterfaceCSS/website/templates/base.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Home{% endblock %}</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}">
+    <script type="text/javascript" src="{{ url_for('static',filename='script/script.js') }}"></script>
+
 </head>
 <body>
     <nav class="navbar">
@@ -31,7 +33,11 @@
             <span class="bar"></span>
             <span class="bar"></span>
         </div>
-
+        {% if user.is_authenticated %}
+        <input class="search" 
+        placeholder="Search Symbol"
+        >
+        {% endif %}
     </nav>
     {% with messages = get_flashed_messages(with_categories=true) %} {% if
         messages %} {% for category, message in messages %} {% if category == 
@@ -56,6 +62,6 @@
     </div>
 
 
-    <script src="scrirt.js"></script>
+
 </body>
 </html>
