--- a/UserInterfaceCSS/website/templates/base.html
+++ b/UserInterfaceCSS/website/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Home{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}">
-    <script type="text/javascript" src="{{ url_for('static',filename='script/script.js') }}"></script>
+    <script defer type="text/javascript" src="{{ url_for('static',filename='script/script.js') }}"></script>
 
 </head>
 <body>
