--- a/UserInterfaceCSS/website/static/css/style.css
+++ b/UserInterfaceCSS/website/static/css/style.css
@@ -10,6 +10,7 @@ body{
     align-items: center;
     padding: 8px 16px 8px 16px;
     justify-content: space-between;
+    z-index: 1;
 }
 
 .nav-link{
@@ -100,7 +101,7 @@ label{
 
 .search-field{
     width: 350px;
-    height: 20px;
+    height: 30px;
     padding: 5px;
     background-color: rgb(223, 248, 253);
     color: rgb(0, 0, 0);
@@ -109,6 +110,13 @@ label{
     border-radius: 3px;
     margin: 15px 20px;
     
+}
+
+.search-button{
+    background-color: rgb(101, 255, 99);
+    color: black;
+    width: 6rem;
+    height: 2.2rem;
 }
 
 @media (max-width:768px){
@@ -159,7 +167,19 @@ h3{
     font-weight: 500;
 }
 
-
+.background{
+    background-image: url("../assets/backgroundimg.jpg");
+    width: 100%;
+    height: 100vh;
+    display: block;
+    position: fixed;
+    display: flex;
+    top: 0px;
+    z-index: -1;
+    justify-content: center;
+    align-items: center;
+    filter: brightness(75%);
+}
 
 
 
