--- a/UserInterfaceCSS/website/templates/home.html
+++ b/UserInterfaceCSS/website/templates/home.html
@@ -4,10 +4,30 @@
     
     <div class="background">
         
-        <form action="" class="search">
-            <input type="" class="search-field" name="symbol" placeholder="Enter Symbol">
-            <button type="submit" class="search-button">Search</button>
-        </form>
+        <form method="post">
+            <input
+              type="text"
+              class="search-field"
+              id = "symbol"
+              name="symbol"
+              placeholder="Enter Symbol"
+            /></br>
+            <input
+              type="date"
+              class="search-field"
+              id = "start"
+              name="start"
+              placeholder="Enter Start Date"
+            /></br>
+            <input
+              type="date"
+              class="search-field"
+              id = "end"
+              name="end"
+              placeholder="Enter End Date"
+            />
+            <button type="submit" class = "submit-btn">Submit</button></br>
+          </form>
         
     </div>
 
