--- a/UserInterfaceCSS/website/templates/home.html
+++ b/UserInterfaceCSS/website/templates/home.html
@@ -11,22 +11,23 @@
               id = "symbol"
               name="symbol"
               placeholder="Enter Symbol"
-            /></br>
-            <input
-              type="date"
-              class="search-field"
-              id = "start"
-              name="start"
-              placeholder="Enter Start Date"
-            /></br>
-            <input
+              /></br>
+              <input
               type="date"
               class="search-field"
               id = "end"
               name="end"
               placeholder="Enter End Date"
+              /></br>
+              <input
+              type="date"
+              class="search-field"
+              id = "start"
+              name="start"
+              placeholder="Enter Start Date"
             />
-            <button type="submit" class = "submit-btn">Submit</button></br>
+            <br>
+            <button type="submit" class = "search-btn">Search</button>
           </form>
         
     </div>
