--- a/UserInterface/website/templates/register.html
+++ b/UserInterface/website/templates/register.html
@@ -41,17 +41,17 @@
         </div>
         <div class="forms">
             <label for="password2">
-                Password (Confirm)
+                Confirm Password
             </label>
             <input
                 type="password"
                 class="form-item"
                 id="password2"
                 name="password2"
-                placeholder="Confirm password"
+                placeholder="Re-enter password"
             >
         </div>
         <br>
-        <button type="submit" class="submit-btn">Submit</button>
+        <button type="submit" class="submit-btn">Register</button>
     </form>
     {% endblock %}
