--- a/UserInterface/website/static/css/style.css
+++ b/UserInterface/website/static/css/style.css
@@ -9,7 +9,7 @@ body{
     color: #212529;
     display: flex;
     align-items: center;
-    padding: 8px 16px 8px 16px;
+    padding: 8px 0px 8px 0px;
     justify-content: space-between;
     z-index: 1;
 }
@@ -17,7 +17,7 @@ body{
 .nav-link{
     color: rgba(255,255,255,.5);    
     text-decoration: none;
-    padding: 0.5rem;
+    padding: 0.5rem 1.5rem;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     text-align: left;
     font-size: 1rem;
@@ -134,6 +134,7 @@ label{
     .navbar-click{
         display: block;
         float: left;
+        padding-left: 10px;
     }
 
     .navbar{
@@ -198,7 +199,7 @@ h3{
 
 
 #graph{
-    width: 70%;
+    width: 75%;
 }
 #buttons{
     display: flex;
@@ -207,15 +208,15 @@ h3{
 #graph-cont {
     display: flex;
 }
-.button-link {
-    text-decoration: none;
+
+.graph-pane{
+    display: flex;
+    justify-content: center;
 }
 
-
-
-
-
-
+.graph-pane > button{
+    width: 8rem;
+}
 
 
 
