--- a/UserInterface/website/templates/graph.html
+++ b/UserInterface/website/templates/graph.html
@@ -3,7 +3,7 @@
     <div id="graph-cont">
       <div id="graph">{{ candlestick_chart | safe}}</div>
       <div id="buttons">
-        <button class="submit-btn">Add</button>
+        <button class="submit-btn">Compare</button>
         <a href = "/" class="submit-btn">Search</a>
       </div>
       <div id="stocks-list">
