--- a/UserInterface/website/templates/graph.html
+++ b/UserInterface/website/templates/graph.html
@@ -1,24 +1,25 @@
 {% extends "base.html" %} {% block title %}Graph{% endblock %} {% block
-    content%} {% if user.is_authenticated %}
-    <div id="graph-cont">
-      <div id="graph">{{ candlestick_chart | safe}}</div>
-      <div id="buttons">
-        <button class="submit-btn">Compare</button>
-        <a href = "/" class="submit-btn">Search</a>
-      </div>
-      <div id="stocks-list">
-        {% for item in symbols %}
-        <p>{{item}}</p>
-        {% endfor %}
-
-      </div>
+  content%} {% if user.is_authenticated %}
+  <div id="graph-cont">
+    <div id="graph">{{ candlestick_chart | safe}}</div>
+    <div id="buttons">
+      <button class="submit-btn">Compare</button>
+      <a href="/" class="submit-btn">Search</a>
     </div>
-    <div class="graph-pane">
-      <button class="submit-btn">Daily</button>
-      <button class="submit-btn">Weekly</button>
-      <button class="submit-btn">Monthly</button>
-
-    </div>
-    
-    {% endif %} {% endblock %}
-    
+  </div>
+  <div class="graph-pane">
+    <form method = "POST">
+      <button class="submit-btn" name="Daily" value="Daily" type="submit">
+        Daily
+      </button>
+      <button class="submit-btn" name="Weekly" value="Weekly" type="submit">
+        Weekly
+      </button>
+      <button class="submit-btn" name="Monthly" value="Monthly" type="submit">
+        Monthly
+      </button>
+    </form>
+  </div>
+  
+  {% endif %} {% endblock %}
+  
