--- a/UserInterface/website/templates/register.html
+++ b/UserInterface/website/templates/register.html
@@ -1,57 +1,49 @@
 {% extends "base.html" %} {% block title %}Register{% endblock %} {% block
-    content %}
+content %}
 
-    <form method="post">
-        <h3 align="center">Register</h3>
-        <div class="forms">
-            <label for="username">
-                Username
-            </label>
-            <input
-                type="username"
-                class="form-item"
-                id="username"
-                name="username"
-                placeholder="Enter username"
-            >
-        </div>
-        <div class="forms">
-            <label for="firstName">
-                First Name
-            </label>
-            <input
-                type="firstName"
-                class="form-item"
-                id="firstName"
-                name="firstName"
-                placeholder="Enter first name"
-            >
-        </div>
-        <div class="forms">
-            <label for="password1">
-                Password
-            </label>
-            <input
-                type="password"
-                class="form-item"
-                id="password1"
-                name="password1"
-                placeholder="Enter password"
-            >
-        </div>
-        <div class="forms">
-            <label for="password2">
-                Confirm Password
-            </label>
-            <input
-                type="password"
-                class="form-item"
-                id="password2"
-                name="password2"
-                placeholder="Re-enter password"
-            >
-        </div>
-        <br>
-        <button type="submit" class="submit-btn">Register</button>
-    </form>
-    {% endblock %}
+<form method="post">
+  <h3 align="center">Register</h3>
+  <div class="forms">
+    <label for="username"> Username </label>
+    <input
+      type="username"
+      class="form-item"
+      id="username"
+      name="username"
+      placeholder="Enter username"
+    />
+  </div>
+  <div class="forms">
+    <label for="firstName"> First Name </label>
+    <input
+      type="firstName"
+      class="form-item"
+      id="firstName"
+      name="firstName"
+      placeholder="Enter first name"
+    />
+  </div>
+  <div class="forms">
+    <label for="password1"> Password </label>
+    <input
+      type="password"
+      class="form-item"
+      id="password1"
+      name="password1"
+      placeholder="Enter password"
+    />
+  </div>
+  <div class="forms">
+    <label for="password2"> Confirm Password </label>
+    <input
+      type="password"
+      class="form-item"
+      id="password2"
+      name="password2"
+      placeholder="Re-enter password"
+    />
+  </div>
+  <br />
+  <button type="submit" class="submit-btn">Register</button>
+</form>
+{% endblock %}
