comparing stocks line graph

--- a/UserInterface/website/templates/compare.html
+++ b/UserInterface/website/templates/compare.html
@@ -14,7 +14,7 @@
         </form>
 
         <div class="comparison-graph">
-            
+            {{ compare_graph | safe }}
         </div>
 
     </div>
