--- a/UserInterface/website/templates/base.html
+++ b/UserInterface/website/templates/base.html
@@ -19,6 +19,9 @@
             <a href="/logout" class="nav-link">
                 Logout
             </a>
+            <a href="/compare" class="nav-link">
+                Compare
+            </a>
             {% else %}
             <a href="/login" class="nav-link">
                 Login
