--- a/UserInterface/website/templates/compare.html
+++ b/UserInterface/website/templates/compare.html
@@ -1,23 +1,24 @@
 {% extends "base.html" %} {% block title %}Graph{% endblock %} {% block
     content%} {% if user.is_authenticated %}
     <div id="graph-comparison-cont">
-
-        <div class = "compare-field-cont">
-            <form method="post">
-                <input
-                type="text"
-                class="compare-field"
-                id = "add-symbol"
-                name="add-symbol"
-                placeholder="Add Symbol to compare"
-                style="width: auto;"
-                /></br>
-                <button type="submit" class = "compare-btn">Add</button>
-            </form>
-        </div>
-
+        <form method="post">
+            <input
+            type="text"
+            class="compare-field"
+            id = "add-symbol"
+            name="add-symbol"
+            placeholder="Add Symbol to compare"
+            style="width: auto;"
+            /></br>
+            <button type="submit" class = "compare-btn">Add</button>
+        </form>
         <div class="comparison-graph">
             {{ compare_graph | safe }}
+            <form method = "POST">
+                <div>
+                    <button class="submit-btn" name = "clear" type = "submit" value="clear">Clear</button>
+                </div>
+            </form>
         </div>
 
     </div>
