--- a/UserInterface/website/templates/compare.html
+++ b/UserInterface/website/templates/compare.html
@@ -15,8 +15,8 @@
         <div class="comparison-graph">
             {{ compare_graph | safe }}
             <form method = "POST">
-                <div>
-                    <button class="submit-btn" name = "clear" type = "submit" value="clear">Clear</button>
+                <div style="display: flex; justify-content: end; padding: 20px; padding-top: 0px;">
+                    <button class="submit-btn" name = "clear" type = "submit" value="clear" style="background-color: gray;">Clear</button>
                 </div>
             </form>
         </div>
