--- a/UserInterface/website/templates/graph.html
+++ b/UserInterface/website/templates/graph.html
@@ -2,8 +2,12 @@
   content%} {% if user.is_authenticated %}
   <div id="graph-cont">
     <div id="graph">{{ candlestick_chart | safe}}</div>
-    <div class = "stocks-list">
-      <button class="submit-btn" name = "Add">Add</button>
+    <div class = "stocks-list" style="display: flex; flex-direction: column; ">
+      <button class="submit-btn" name = "Add">MACD</button>
+      <button class="submit-btn" name = "Add">RSI</button>
+      <button class="submit-btn" name = "Add">SMA-50</button>
+      <button class="submit-btn" name = "Add">SMA-100</button>
+      
     </div>
   </div>
   <div class="graph-pane">
