--- a/UserInterface/website/templates/login.html
+++ b/UserInterface/website/templates/login.html
@@ -5,23 +5,11 @@
   <h3 align="center">Login</h3>
   <div class="forms">
     <label for="username">Username</label>
-    <input
-      type="username"
-      class="form-item"
-      id="username"
-      name="username"
-      placeholder="Enter username"
-    />
+    <input type="username" class="form-item" id="username" name="username" placeholder="Enter username" />
   </div>
   <div class="forms">
     <label for="password">Password</label>
-    <input
-      type="password"
-      class="form-item"
-      id="password"
-      name="password"
-      placeholder="Enter password"
-    />
+    <input type="password" class="form-item" id="password" name="password" placeholder="Enter password" />
   </div>
   <button type="submit" class="submit-btn">Login</button>
 </form>
