--- a/UserInterface/website/templates/graph.html
+++ b/UserInterface/website/templates/graph.html
@@ -1,28 +1,30 @@
 {% extends "base.html" %} {% block title %}Graph{% endblock %} {% block
-content%} {% if user.is_authenticated %}
-<div id="graph-cont">
-  <div id="graph">{{ candlestick_chart | safe}}</div>
-  <div class="stocks-list" style="display: flex; flex-direction: column; ">
-    <button class="submit-btn" name="Add">MACD</button>
-    <button class="submit-btn" name="Add">RSI</button>
-    <button class="submit-btn" name="Add">SMA-50</button>
-    <button class="submit-btn" name="Add">SMA-100</button>
-
-  </div>
-</div>
-<div class="graph-pane">
-  <form method="POST">
-    <button class="submit-btn" name="Daily" value="Daily" type="submit">
-      Daily
-    </button>
-    <button class="submit-btn" name="Weekly" value="Weekly" type="submit">
-      Weekly
-    </button>
-    <button class="submit-btn" name="Monthly" value="Monthly" type="submit">
-      Monthly
-    </button>
+  content%} {% if user.is_authenticated %}
+  <div id="graph-cont">
+    <div id="graph">{{ candlestick_chart | safe}}</div>
+    <form method = "POST">
+    <div class="stocks-list" style="display: flex; flex-direction: column">
+      <button class="submit-btn" value="m" name="MACD" type="submit">MACD</button>
+      <button class="submit-btn" value="r" name="RSI" type="submit">RSI</button>
+      <button class="submit-btn" value="s50" name="SMA-50" type="submit">SMA-50</button>
+      <button class="submit-btn" value="s100" name="SMA-100" type="submit">SMA-100</button>
+      <button class="submit-btn" value="clear" name="clear" type="submit" style="background-color: gray;">Clear</button>
+    </div>
   </form>
-</div>
-
-{% endif %} {% endblock %}
-
+  </div>
+  <div class="graph-pane">
+    <form method="POST">
+      <button class="submit-btn" name="Daily" value="Daily" type="submit">
+        Daily
+      </button>
+      <button class="submit-btn" name="Weekly" value="Weekly" type="submit">
+        Weekly
+      </button>
+      <button class="submit-btn" name="Monthly" value="Monthly" type="submit">
+        Monthly
+      </button>
+    </form>
+  </div>
+  
+  {% endif %} {% endblock %}
+  
