--- a/UserInterface/website/templates/login.html
+++ b/UserInterface/website/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
 %}
 
-<form method="post">
+<form method="post" class="auth-form">
   <h3 align="center">Login</h3>
   <div class="forms">
     <label for="username">Username</label>
