--- a/UserInterface/website/templates/register.html
+++ b/UserInterface/website/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block title %}Register{% endblock %} {% block
 content %}
 
-<form method="post">
+<form method="post" class="auth-form">
   <h3 align="center">Register</h3>
   <div class="forms">
     <label for="username"> Username </label>
