filter-page styled

--- a/UserInterface/website/templates/base.html
+++ b/UserInterface/website/templates/base.html
@@ -21,6 +21,9 @@
             <a href="/compare" class="nav-link">
                 Compare
             </a>
+            <a href="/filter" class="nav-link">
+                Filters
+            </a>
             <a href="/logout" class="nav-link">
                 Logout
             </a>
