--- a/UserInterface/website/static/css/style.css
+++ b/UserInterface/website/static/css/style.css
@@ -232,6 +232,20 @@ label {
     transform: translateX(-50%);
 }
 
+.filter-container{
+    background-color: rgba(222, 196, 217, 0.5);
+    width: 100%;
+    height: 100vh;
+    display: block;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    top: 0px;
+    z-index: -1;
+    justify-content: center;
+    align-items: center;
+}
+
 /* for mobile and smaller devices */
 
 @media (max-width:768px) {
