requierments updated, and filter,html updated

--- a/UserInterface/website/templates/filter.html
+++ b/UserInterface/website/templates/filter.html
@@ -1,15 +1,20 @@
 {% extends "base.html" %} {% block title %}Filters{% endblock %} {% block
-    content%} {% if user.is_authenticated %}
+  content%} {% if user.is_authenticated %}
+  
+  <div class="filter-container">
+    <form method="post">
+      <input list ="filter_list" class="search-field" id="filter" name="filter" placeholder="Enter Filter" /><datalist id = "filter_list">
+        <option value = "PE Ratio">
+        <option value = "Market Cap">
+        <option value = "Price">
+        <option value = "Volume">
+      </datalist></br>
+      <input type="number" class="search-field" id="number" name="number" placeholder="Enter no. of stocks" /></br>
+      <br>
+      <button type="submit" class="search-btn">Apply</button>
+    </form>
     
-    <div class="filter-container">
-      <form method="post">
-        <input type="text" class="search-field" id="filter" name="filter" placeholder="Enter Filter" /></br>
-        <input type="number" class="search-field" id="number" name="number" placeholder="Enter no. of stocks" /></br>
-        <br>
-        <button type="submit" class="search-btn">Apply</button>
-      </form>
-      
-    </div>
+  </div>
 
-    {% endif %} {% endblock %}
-    
+  {% endif %} {% endblock %}
+  
