--- a/UserInterface/website/static/css/style.css
+++ b/UserInterface/website/static/css/style.css
@@ -242,8 +242,12 @@ label {
     flex-direction: column;
     top: 0px;
     z-index: -1;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+}
+
+.filter-list{
+    bottom: auto;    
 }
 
 /* for mobile and smaller devices */
