--- a/UserInterface/website/templates/filter.html
+++ b/UserInterface/website/templates/filter.html
@@ -14,7 +14,13 @@
       <button type="submit" class="search-btn">Apply</button>
     </form>
     
+    <ul class="filter-list">
+      {% for item in flist %}
+      <li>{{ item[0],item[1] }}</li>
+      {% endfor %}
+    </ul>
   </div>
+
 
   {% endif %} {% endblock %}
   
