chore: Update configuration to use API key from environment variable

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -6,8 +6,8 @@
 
   <form method="post">
     <input type="text" class="search-field" id="symbol" name="symbol" placeholder="Enter Symbol" /></br>
-    <input type="date" class="search-field" id="end" name="end" placeholder="Enter End Date" /></br>
-    <input type="date" class="search-field" id="start" name="start" placeholder="Enter Start Date" />
+    <input type="date" class="search-field" id="start" name="start" placeholder="Enter Start Date" /></br>
+    <input type="date" class="search-field" id="end" name="end" placeholder="Enter End Date" />
     <br>
     <button type="submit" class="search-btn">Search</button>
   </form>
